Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.6(EOL), 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL)
Description
The fix of MDEV-27783 appears to have been incomplete. I just got the following crash:
|
bb-10.6-release c9803504389e12b79253e12f1d7d78fbdf92395c |
CURRENT_TEST: main.alter_table
|
mysqltest: At line 1636: query 'ALTER TABLE ti1 ADD PRIMARY KEY(a)' failed: <Unknown> (2013): Lost connection to server during query
|
...
|
2022-08-05 11:17:44 0x7fd40d683640 InnoDB: Assertion failure in file /mariadb/10.6/storage/innobase/dict/dict0dict.cc line 1844
|
InnoDB: Failing assertion: table->get_ref_count() == 0
|
...
|
#6 0x0000557143293726 in ut_dbg_assertion_failed (
|
expr=expr@entry=0x5571437ef3c1 "table->get_ref_count() == 0",
|
file=file@entry=0x5571437ef958 "/mariadb/10.6/storage/innobase/dict/dict0dict.cc", line=line@entry=1844) at /mariadb/10.6/storage/innobase/ut/ut0dbg.cc:60
|
#7 0x000055714331011f in dict_sys_t::remove (this=0x557143e9fc40 <dict_sys>,
|
table=table@entry=0x7fd36c11a338, lru=lru@entry=false,
|
keep=keep@entry=false)
|
at /mariadb/10.6/storage/innobase/dict/dict0dict.cc:1844
|
#8 0x0000557143330cb4 in trx_t::commit (this=this@entry=0x7fd40e967680,
|
...
|
Thread 55 (Thread 0x7fd32ffff640 (LWP 2881184)):
|
...
|
#8 0x0000557143120b44 in dict_sys_t::lock (this=this@entry=0x557143e9fc40 <dict_sys>, file=file@entry=0x5571437ef958 "/mariadb/10.6/storage/innobase/dict/dict0dict.cc", line=line@entry=225) at /mariadb/10.6/storage/innobase/include/dict0dict.h:1532
|
#9 0x000055714330d54f in dict_table_close (table=table@entry=0x7fd36c11a338) at /mariadb/10.6/storage/innobase/dict/dict0dict.cc:225
|
#10 0x000055714330d5a6 in dict_table_close (table=0x7fd36c11a338, dict_locked=dict_locked@entry=false, thd=0x557145271ac8, mdl=0x7fd31c0016c0) at /mariadb/10.6/storage/innobase/dict/dict0dict.cc:253
|
#11 0x0000557143235002 in purge_node_t::close_table (this=this@entry=0x557144f2d6f8) at /mariadb/10.6/storage/innobase/include/row0purge.h:229
|
#12 0x000055714323509b in purge_node_t::retain_mdl (this=this@entry=0x557144f2d6f8, table_id=57) at /mariadb/10.6/storage/innobase/include/row0purge.h:249
|
#13 0x0000557143232392 in row_purge_parse_undo_rec (node=node@entry=0x557144f2d6f8, undo_rec=undo_rec@entry=0x557144f3dc18 "", thr=thr@entry=0x557144f2d508, updated_extern=updated_extern@entry=0x7fd32fffea57) at /mariadb/10.6/storage/innobase/row/row0purge.cc:932
|
#14 0x0000557143234c7c in row_purge (node=node@entry=0x557144f2d6f8, undo_rec=undo_rec@entry=0x557144f3dc18 "", thr=thr@entry=0x557144f2d508) at /mariadb/10.6/storage/innobase/row/row0purge.cc:1120
|
#15 0x0000557143234d1b in row_purge_step (thr=thr@entry=0x557144f2d508) at /mariadb/10.6/storage/innobase/row/row0purge.cc:1172
|
#16 0x00005571431da5e1 in que_thr_step (thr=thr@entry=0x557144f2d508) at /mariadb/10.6/storage/innobase/que/que0que.cc:653
|
#17 0x00005571431da7c2 in que_run_threads_low (thr=thr@entry=0x557144f2d508) at /mariadb/10.6/storage/innobase/que/que0que.cc:709
|
#18 0x00005571431da87f in que_run_threads (thr=thr@entry=0x557144f2d508) at /mariadb/10.6/storage/innobase/que/que0que.cc:729
|
#19 0x00005571432610ac in srv_task_execute () at /mariadb/10.6/storage/innobase/srv/srv0srv.cc:1656
|
#20 0x0000557143261794 in purge_worker_callback () at /mariadb/10.6/storage/innobase/srv/srv0srv.cc:1899
|
I think that a similar problem (crash of a non-debug server) may affect DROP TABLE as well as any table rebuild operation (including OPTIMIZE TABLE and TRUNCATE TABLE) on tables that contain FULLTEXT INDEX.
Attachments
Issue Links
- relates to
-
MDEV-29277 On error, fts_sync_table() fails to release a table handle
-
- Closed
-
-
MDEV-27783 InnoDB: Failing assertion: table->get_ref_count() == 0 upon ALTER TABLE ... MODIFY COLUMN
-
- Closed
-